# pytest-trust-random

./: README.md  mkdocs.yml  pyproject.toml  setup.py
docs/: index.md  reference.md  usage.md
examples/: benchmark_definition.py  benchmark_test_coins.py  benchmark_test_example.py  pytest_config.json  test.json  test.py
examples/benchmark/: settings.json
examples/benchmarks/benchmark_test_example.py/: benchmark.json  settings.json
pytest_trust_random/: __init__.py  auto_benchmarker.py  base_models.py  calc_failure.py  conftest.py  func_benchmarker.py  plugin.py  setup_func_benchmarker.py  utils.py
pytest_trust_random/definitions/: auto_benchmarker.py
