[tool.poetry]
name = "pytest-trust-random"
version = "0.1.0"
description = ""
authors = ["mark-todd <markpeter.todd@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
pydantic = "^1.10.2"
numpy = "^1.23.5"
joblib = "^1.2.0"


[tool.poetry.dev-dependencies]

[tool.poetry.build]
script = "setup.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath="./"
venv=".venv"
