[tool.poetry]
name = "pytest-trust-random"
version = "0.1.0"
description = ""
authors = ["mark-todd <markpeter.todd@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pytest = "^7.2.0"
pydantic = "^1.10.2"
numpy = "^1.23.5"
joblib = "^1.2.0"
pytest-rerunfailures = "^10.3"
mkdocstrings = {extras = ["python"], version = "^0.19.1"}
mkdocs-material = "^8.5.11"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
isort = "^5.11.2"
autoflake = "^2.0.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath="./"
venv=".venv"

[tool.poetry.plugins.pytest11]
"pytest_trust_random" = "pytest_trust_random"
